cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: redis-cluster # redis-ha
  labels:
    app: redis-cluster # redis-ha
spec:
  ports:
  - port: 6379 
    targetPort: 6379
    name: client
    nodePort: 31870
  - port: 16379     
    targetPort: 16379 
    name: gossip
  type: NodePort
  selector:
    app: redis-cluster
